gcc/testsuite/gcc.dg/cpp/19960224-2.c
/* { dg-do preprocess } */

#if 0
#if 0
#endif /	/* { dg-error "text after #endif" "text after #endif" } */
#endif
